--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-imweb-tpl-complie",
   "description": "Put templates content to JS object",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "homepage": "https://github.com/QQEDU/grunt-imweb-tpl-complie",
   "author": {
     "name": "Daniel Yang",
@@ -26,7 +26,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "js-beautify": "*"
+    "js-beautify": "*",
+    "micro-tpl": "*"
   },
   "devDependencies": {
     "grunt-mocha-phantomjs": "~0.4.0",
